<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.desertmoon.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_fragOfferItemList"
            app:destination="@id/fragOfferItemList" />
        <action
            android:id="@+id/action_nav_home_to_fragChekout"
            app:destination="@id/fragChekout" />
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.desertmoon.ui.orders.OrdersFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_nav_orders_self"
            app:destination="@id/nav_orders" />
        <action
            android:id="@+id/action_nav_orders_to_notificationFragment"
            app:destination="@id/nav_notifications" />
        <action
            android:id="@+id/action_nav_orders_to_fragChekout"
            app:destination="@id/fragChekout" />
    </fragment>

    <fragment
        android:id="@+id/nav_address"
        android:name="com.desertmoon.ui.address.AddressFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_address" >
        <action
            android:id="@+id/action_nav_address_to_addAddressFragment"
            app:destination="@id/addAddressFragment" />
        <action
            android:id="@+id/action_nav_address_to_fragChekout"
            app:destination="@id/fragChekout" />
    </fragment>

    <fragment
        android:id="@+id/nav_cash_back"
        android:name="com.desertmoon.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" >
        <action
            android:id="@+id/action_nav_cash_back_to_fragChekout"
            app:destination="@id/fragChekout" />
    </fragment>

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.desertmoon.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.desertmoon.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/fragOfferItemList"
        android:name="com.desertmoon.ui.offerlist.FragOfferItemList"
        android:label="frag_offer_item_list_fragment"
        tools:layout="@layout/frag_offer_item_list_fragment" >
        <action
            android:id="@+id/action_fragOfferItemList_to_itemDescription"
            app:destination="@id/itemDescription" />
        <action
            android:id="@+id/action_fragOfferItemList_to_fragChekout"
            app:destination="@id/fragChekout" />
    </fragment>
    <fragment
        android:id="@+id/itemDescription"
        android:name="com.desertmoon.ui.discription.ItemDescription"
        android:label="item_description_fragment"
        tools:layout="@layout/item_description_fragment" >
        <action
            android:id="@+id/action_itemDescription_to_fragChekout"
            app:destination="@id/fragChekout" />
    </fragment>
    <fragment
        android:id="@+id/addAddressFragment"
        android:name="com.desertmoon.ui.address.AddAddressFragment"
        android:label="add_address_fragment"
        tools:layout="@layout/add_address_fragment" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.desertmoon.ui.notifications.NotificationFragment"
        android:label="notification_fragment"
        tools:layout="@layout/notification_fragment" />
    <fragment
        android:id="@+id/fragChekout"
        android:name="com.desertmoon.ui.cart.FragChekout"
        android:label="frag_chekout"
        tools:layout="@layout/frag_chekout" />
</navigation>